--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "browserslist": [
     "> 1%",
@@ -27,6 +28,7 @@
     "current-device": "^0.10.0",
     "del": "^5.1.0",
     "get-classes-from-html": "^1.0.1",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-csso": "^4.0.1",
